--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.0.2",
     "class-variance-authority": "^0.7.0",
     "expo": "^51.0.24",
@@ -25,6 +26,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "firebase": "^10.12.5",
     "iconsax-react-native": "^0.0.8",
     "install": "^0.13.0",
     "nativewind": "^2.0.11",
