feat: link sign up with to backend

--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 FIREBASE_API_KEY="AIzaSyBWSGrNe54OKX4rLKBcUH22VwNXH9UFo4U"
+FIREBASE_AUTHDOMAIN="paytracker-3887d.firebaseapp.com"
+FIREBASE_PROJECT_ID="paytracker-3887d"
+  authDomain: ,
+  projectId: ,
+  storageBucket: "paytracker-3887d.appspot.com",
+  messagingSenderId: "420921975697",
+  appId: "1:420921975697:web:b4e58576e4fc9cef613030",
