feat: add fetching functionality of userData

--- a/.env
+++ b/.env
@@ -1,8 +1,6 @@
 FIREBASE_API_KEY="AIzaSyBWSGrNe54OKX4rLKBcUH22VwNXH9UFo4U"
 FIREBASE_AUTHDOMAIN="paytracker-3887d.firebaseapp.com"
 FIREBASE_PROJECT_ID="paytracker-3887d"
-  authDomain: ,
-  projectId: ,
-  storageBucket: "paytracker-3887d.appspot.com",
-  messagingSenderId: "420921975697",
-  appId: "1:420921975697:web:b4e58576e4fc9cef613030",
+FIREBASE_STORAGE_BUCKET="paytracker-3887d.appspot.com"
+FIREBASE_MESSAGING_SENDER_ID="420921975697"
+FIREBASE_APP_ID="1:420921975697:web:b4e58576e4fc9cef613030"
