--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.0.2",
     "class-variance-authority": "^0.7.0",
-    "expo": "^51.0.24",
+    "expo": "^51.0.26",
     "expo-font": "~12.0.9",
     "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
-    "expo-router": "^3.5.20",
+    "expo-router": "^3.5.21",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
@@ -34,7 +34,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.52.2",
-    "react-native": "0.74.3",
+    "react-native": "^0.74.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
